<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/refreshListID"
            android:icon="@drawable/ic_refresh2"
            android:title="@string/removeItem"
            android:contentDescription="@string/content_description_remove"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/removeItemID"
            android:icon="@drawable/ic_remove2"
            android:title="@string/removeItem"
            android:contentDescription="@string/content_description_remove"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/addItemID"
            android:icon="@drawable/ic_plus2"
            android:title="@string/addItem"
            android:contentDescription="@string/content_description_add"
            app:showAsAction="ifRoom" />

</menu>